updated the does and finished the admin routes
