# src/routes/route.routes.ts
@@ -1,5 +1,5 @@
 import { authMiddleware } from './../middlewares/auth.middleware';
-import { handleCreateRoute, handleCreateRouteBus } from './../controllers/route.controller';
+import { handleCreateRoute, handleCreateRouteBus, handleDeleteRoute, handleListRoutes } from './../controllers/route.controller';
 import { Router } from 'express';
 import configs from '../configs';
 const { roles } = configs;
@@ -15,6 +15,10 @@ routesRouter.post("/", authMiddleware(roles.ADMIN) as any, handleCreateRoute)
 // Create Route's Bus Route
 routesRouter.post("/:id/bus", authMiddleware(roles.ADMIN) as any, handleCreateRouteBus)
 
+// All Routes Route 
+routesRouter.get("/", handleListRoutes)
 
+// Delete Route 
+routesRouter.delete("/:id", authMiddleware(roles.ADMIN) as any, handleDeleteRoute)
 
 export default routesRouter
